# CSVReader

./: CMakeLists.txt  README.md
include/: CSVColumn.hpp  CSVReader.hpp
src/: CMakeLists.txt  CSVColumn.cpp  CSVReader.cpp
test/: CMakeLists.txt  CSVReader_Test.cpp  test.csv
